# api-midterm-project

./: pyproject.toml  wsgi.py
myapi/: db.sqlite3
myapi/api/: models.py  urls.py  views.py
myapi/api/migrations/: 0001_initial.py
myapi/myapi/: settings.py  urls.py  wsgi.py
